# sdl-c-app

./: .gitignore  AppConfig.h.in  CMakeLists.txt  Makefile  README.md  main  main.c
cmake/sdl2/: FindSDL2_image.cmake  FindSDL2_mixer.cmake
